# circulatory_autogen

./: .gitignore  .project  .pydevproject  404.html  BG_Modules.cellml  CLAUDE.md  LICENSE  README.md  autogen_physiological.cellml  autogen_simple_physiological.cellml  autogen_test.cellml  autogen_test_simple.cellml  base_script.cellml  generate_circulatory_system.py  generation_helper.py  index.html  objects.inv  old_main_ADAN-218.cellml  parameters_autogen.cellml  parameters_autogen.csv  parameters_cellml_2_csv.py  parameters_orig.csv  physiological_vessel_array.csv  pyproject.toml  requirements.txt  run_pytest.sh  simple_physiological_vessel_array.csv  simple_vessel_array.csv  sitemap.xml  sum_nom_terminal_flows.py  tutorial.docx
api/: index.html
create-model/: index.html
data/: df_vessels.csv
design-model/: index.html
example-3compartment-model/: index.html
funcs_user/: cost_funcs_user.py  model_wrapper_funcs_user.py  operation_funcs_user.py
generated_models/: 3compartment.cellml  3compartment_modules.cellml  3compartment_new_valve.cellml  3compartment_parameters.cellml  3compartment_parameters.csv  3compartment_units.cellml  BG_modules.cellml  FTU_wCVS.cellml  FTU_wCVS_modules.cellml  FTU_wCVS_parameters.cellml  FTU_wCVS_parameters.csv  FinalModel.cellml  FinalModel_modules.cellml  FinalModel_parameters.cellml  FinalModel_parameters.csv  FinalModel_units.cellml  behdad_test1.cellml  behdad_test1_modules.cellml  behdad_test1_parameters.cellml  behdad_test1_parameters.csv  cerebral_elic.cellml  cerebral_elic_modules.cellml  cerebral_elic_parameters.cellml  cerebral_elic_parameters.csv  control_phys.cellml  control_phys_modules.cellml  control_phys_parameters.cellml  elic.cellml  elic_modules.cellml  elic_parameters.cellml  elic_parameters.csv  neonatal.cellml  neonatal_modules.cellml  neonatal_parameters.cellml  neonatal_parameters.csv  physiological.cellml  physiological_modules.cellml  physiological_parameters.cellml  physiological_parameters.csv  physiological_units.cellml  (+4 more)
getting-started/: index.html
identifiability-analysis/: index.html
model-generation-simulation/: index.html
module_config_user/: BG_volume_control_module_config.json  BG_volume_control_modules.cellml  Lymphatic_BG_modules.cellml  NESAN_module_config.json  NESAN_modules.cellml  NKE_pump_module_config.json  NKE_pump_modules.cellml  README_module_config_user.md  Simple_ODE_Benchmark_module_config.json  Simple_ODE_Benchmark_modules.cellml  cvs_mvp_config.json  cvs_mvp_modules.cellml  metabolism_modules.cellml  metabolism_modules_config.json  module_config_chemoreceptor.json  module_config_user.json  module_config_user_example.json  tutorial_module_config.json  tutorial_modules.cellml  user_chemoreceptor_modules.cellml  user_units.cellml  vessel_properties_module_config.json  vessel_properties_modules.cellml
old/: old_main_ADAN-218.cellml
operation_funcs_user/: operation_funcs_user.py
other-features/: index.html
output_models/: simple_physiological.cellml  simple_physiological_parameters.cellml
param_id_output/: 3compartment_param_id_output_paths.csv  log.txt
parameter-identification/: index.html
resources/: .~lock.behdad_test1_vessel_array.csv#  .~lock.elic_parameters.csv#  .~lock.lung_ROM_parameters.csv#  .~lock.lung_ROM_vessel_array.csv#  .~lock.simple_physiological_parameters.csv#  (+136 more)
(+302 files in other folders)
